Got navigation working Available open new tab functionality (opens default tab for now) and navigation to a different pages with different routes is ready
Changed interaction between DirectoryNavigation vm and Directory vm, now every time Directory view model gets navigated it messages DirectoryNavigation view model to initialize new directory to work with

Tab service handles tab interaction (it is work in progress). Page service gets page (in future might be helpful to differentiate between "Directory" and "MyPC" pages

--- a/FileExplorer/FileExplorer.csproj
+++ b/FileExplorer/FileExplorer.csproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <None Remove="UI\UserControls\DirectoryNavigationPanel.xaml" />
     <None Remove="Views\DirectoryPage.xaml" />
+    <None Remove="Views\ShellPage.xaml" />
   </ItemGroup>
 
   <ItemGroup>
@@ -42,5 +43,13 @@
     <Page Update="UI\UserControls\DirectoryNavigationPanel.xaml">
       <Generator>MSBuild:Compile</Generator>
     </Page>
+  </ItemGroup>
+
+  <ItemGroup>
+    <CustomAdditionalCompileInputs Remove="Views\ShellPage.xaml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Remove="Views\ShellPage.xaml" />
   </ItemGroup>
 </Project>
