Created first version of file details part
User can view more data about storage item

Also improved navigation route. Now user can type in file name (with full path) to open file using route. It opens file And navigates to its parent folder at the same time

--- a/FileExplorer/FileExplorer.csproj
+++ b/FileExplorer/FileExplorer.csproj
@@ -12,6 +12,7 @@
   </PropertyGroup>
   <ItemGroup>
     <None Remove="UI\UserControls\DirectoryNavigationPanel.xaml" />
+    <None Remove="UI\UserControls\FileDetails.xaml" />
     <None Remove="Views\DirectoryPage.xaml" />
     <None Remove="Views\ShellPage.xaml" />
   </ItemGroup>
@@ -47,5 +48,11 @@
 
   <ItemGroup>
     <Resource Remove="Views\ShellPage.xaml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Page Update="UI\UserControls\FileDetails.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
 </Project>
