--- a/FileExplorer/FileExplorer.csproj
+++ b/FileExplorer/FileExplorer.csproj
@@ -13,6 +13,7 @@
   </PropertyGroup>
   <ItemGroup>
     <None Remove="UI\UserControls\DirectoryNavigationPanel.xaml" />
+    <None Remove="UI\UserControls\DirectoryToolBar.xaml" />
     <None Remove="Views\DirectoryPage.xaml" />
     <None Remove="Views\ShellPage.xaml" />
   </ItemGroup>
@@ -48,5 +49,11 @@
 
   <ItemGroup>
     <Resource Remove="Views\ShellPage.xaml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Page Update="UI\UserControls\DirectoryToolBar.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
 </Project>
