Created all pages for settings Navigation is working correctly

--- a/FileExplorer/FileExplorer.csproj
+++ b/FileExplorer/FileExplorer.csproj
@@ -36,7 +36,10 @@
     <None Remove="Package.appxmanifest" />
     <None Remove="UI\UserControls\DirectoryNavigationPanel.xaml" />
     <None Remove="Views\DirectoryPage.xaml" />
+    <None Remove="Views\Settings\Pages\SettingsAboutPage.xaml" />
     <None Remove="Views\Settings\Pages\SettingsExplorerPage.xaml" />
+    <None Remove="Views\Settings\Pages\SettingsOnStartupPage.xaml" />
+    <None Remove="Views\Settings\Pages\SettingsPreferencesPage.xaml" />
     <None Remove="Views\Settings\SettingsContentDialog.xaml" />
     <None Remove="Views\ShellPage.xaml" />
   </ItemGroup>
@@ -117,6 +120,15 @@
     <None Update="appsettings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <Page Update="Views\Settings\Pages\SettingsAboutPage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Update="Views\Settings\Pages\SettingsOnStartupPage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Update="Views\Settings\Pages\SettingsPreferencesPage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Update="Views\Settings\Pages\SettingsExplorerPage.xaml">
       <Generator>MSBuild:Compile</Generator>
     </Page>
