Added info bar that can be shown from any place of an app by using Messenger Info bar disappears after some time..

--- a/FileExplorer/FileExplorer.csproj
+++ b/FileExplorer/FileExplorer.csproj
@@ -34,6 +34,7 @@
     <None Remove="Images\StoreLogo.png" />
     <None Remove="Images\Wide310x150Logo.scale-200.png" />
     <None Remove="Package.appxmanifest" />
+    <None Remove="UI\UserControls\CommandedInfoBar.xaml" />
     <None Remove="UI\UserControls\DirectoryItemInfoPane.xaml" />
     <None Remove="UI\UserControls\DirectoryNavigationPanel.xaml" />
     <None Remove="Views\DirectoryPage.xaml" />
@@ -120,6 +121,9 @@
     <None Update="appsettings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <Page Update="UI\UserControls\CommandedInfoBar.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Update="UI\UserControls\DirectoryItemInfoPane.xaml">
       <Generator>MSBuild:Compile</Generator>
     </Page>
