--- a/Helpers/Helpers.csproj
+++ b/Helpers/Helpers.csproj
@@ -13,5 +13,6 @@
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0" />
       <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.5.240311000" />
       <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.756" />
+      <PackageReference Include="Vanara.Windows.Shell" Version="4.0.3" />
   </ItemGroup>
 </Project>
