Created IStorage interface To represent storage items such as directory (folder), drive (disk), cached search result and other IStorage interface was created Worked on navigation to make it more easier and with less code

--- a/FileExplorer/FileExplorer.csproj
+++ b/FileExplorer/FileExplorer.csproj
@@ -42,7 +42,7 @@
     <None Remove="UI\UserControls\DirectoryNavigationPanel.xaml" />
     <None Remove="UI\UserControls\DriveInformationItem.xaml" />
     <None Remove="Views\DirectoryPage.xaml" />
-    <None Remove="Views\DrivesPage.xaml" />
+    <None Remove="Views\HomePage.xaml" />
     <None Remove="Views\Settings\Pages\SettingsAboutPage.xaml" />
     <None Remove="Views\Settings\Pages\SettingsExplorerPage.xaml" />
     <None Remove="Views\Settings\Pages\SettingsPreferencesPage.xaml" />
@@ -151,13 +151,5 @@
 
   <ItemGroup Condition="'$(DisableMsixProjectCapabilityAddedByProject)'!='true' and '$(EnableMsixTooling)'=='true'">
     <ProjectCapability Include="Msix" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <CustomAdditionalCompileInputs Remove="Views\DrivesPage.xaml" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Resource Remove="Views\DrivesPage.xaml" />
   </ItemGroup>
 </Project>
