Fixed seanding search message 2 times, now it is as should be 1. Moved search bar logic into its own user control

--- a/FileExplorer/FileExplorer.csproj
+++ b/FileExplorer/FileExplorer.csproj
@@ -42,6 +42,7 @@
     <None Remove="UI\UserControls\DirectoryNavigationPanel.xaml" />
     <None Remove="UI\UserControls\DriveInformationItem.xaml" />
     <None Remove="UI\UserControls\FileOperationsToolbar.xaml" />
+    <None Remove="UI\UserControls\SearchControl.xaml" />
     <None Remove="Views\DirectoryPage.xaml" />
     <None Remove="Views\HomePage.xaml" />
     <None Remove="Views\Settings\Pages\SettingsAboutPage.xaml" />
@@ -127,6 +128,9 @@
     <None Update="appsettings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <Page Update="UI\UserControls\SearchControl.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Update="UI\UserControls\FileOperationsToolbar.xaml">
       <Generator>MSBuild:Compile</Generator>
     </Page>
