Updated FileOperationViewModel, now it is static resource, so any xaml element can access its commands and properties. It is useful when we need to access some file commands from data context that isn't a view model.
Created basic properties logic. It is upgraded details logic that supports drives and other directory items.

--- a/FileExplorer/FileExplorer.csproj
+++ b/FileExplorer/FileExplorer.csproj
@@ -41,6 +41,7 @@
     <None Remove="UI\UserControls\DirectoryItemInfoPane.xaml" />
     <None Remove="UI\UserControls\DirectoryNavigationPanel.xaml" />
     <None Remove="UI\UserControls\DriveInformationItem.xaml" />
+    <None Remove="UI\UserControls\DynamicItemVIew.xaml" />
     <None Remove="UI\UserControls\FileOperationsToolbar.xaml" />
     <None Remove="UI\UserControls\SearchControl.xaml" />
     <None Remove="Views\DirectoryPage.xaml" />
@@ -128,6 +129,9 @@
     <None Update="appsettings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <Page Update="UI\UserControls\DynamicItemView.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Update="UI\UserControls\SearchControl.xaml">
       <Generator>MSBuild:Compile</Generator>
     </Page>
