--- a/FileExplorer.Core/FileExplorer.Core.csproj
+++ b/FileExplorer.Core/FileExplorer.Core.csproj
@@ -18,4 +18,8 @@
     <ProjectReference Include="..\Helpers\Helpers.csproj" />
     <ProjectReference Include="..\Models\Models.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Services\Storage\" />
+  </ItemGroup>
 </Project>
