Moved tool bar wtih file operations in directory page (Again)
To prevent any other class to have file operations logic. Only directory should "know" how to create copy or delete items in it

--- a/FileExplorer/FileExplorer.csproj
+++ b/FileExplorer/FileExplorer.csproj
@@ -41,9 +41,9 @@
     <None Remove="UI\UserControls\DirectoryNavigationPanel.xaml" />
     <None Remove="UI\UserControls\DriveInformationItem.xaml" />
     <None Remove="UI\UserControls\DynamicItemVIew.xaml" />
-    <None Remove="UI\UserControls\FileOperationsToolbar.xaml" />
     <None Remove="UI\UserControls\ItemIPropertiesPanel.xaml" />
     <None Remove="UI\UserControls\SearchControl.xaml" />
+    <None Remove="UI\UserControls\ViewOptionsSelector.xaml" />
     <None Remove="Views\DirectoryPage.xaml" />
     <None Remove="Views\HomePage.xaml" />
     <None Remove="Views\Settings\Pages\SettingsAboutPage.xaml" />
@@ -129,13 +129,13 @@
     <None Update="appsettings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <Page Update="UI\UserControls\ViewOptionsSelector.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Update="UI\UserControls\DynamicItemView.xaml">
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Update="UI\UserControls\SearchControl.xaml">
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Update="UI\UserControls\FileOperationsToolbar.xaml">
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Update="UI\UserControls\DriveInformationItem.xaml">
