Added basic properties Now user can see basic properties of directory item. For now only files and folder are working. Changed structure of main hierarchy now thumbnail is being created without knowing parent path but instead requiring it as parameter for updating. Basic properties are now without thumbnail, because some item do not require thumbnail

--- a/FileExplorer/FileExplorer.csproj
+++ b/FileExplorer/FileExplorer.csproj
@@ -43,6 +43,7 @@
     <None Remove="UI\UserControls\DynamicItemVIew.xaml" />
     <None Remove="UI\UserControls\ItemIPropertiesPanel.xaml" />
     <None Remove="UI\UserControls\SearchControl.xaml" />
+    <None Remove="UI\UserControls\StorageProperties\DirectoryItemPropertiesViewer.xaml" />
     <None Remove="UI\UserControls\ViewOptionsSelector.xaml" />
     <None Remove="Views\DirectoryPage.xaml" />
     <None Remove="Views\HomePage.xaml" />
@@ -129,6 +130,9 @@
     <None Update="appsettings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <Page Update="UI\UserControls\StorageProperties\DirectoryItemPropertiesViewer.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Update="UI\UserControls\ViewOptionsSelector.xaml">
       <Generator>MSBuild:Compile</Generator>
     </Page>
